--- a/style.css
+++ b/style.css
@@ -1,1 +1,75 @@
 /* Add styles */
+/* 
+Note for width: 
+- Mobile: 375px
+- Desktop: 1440px
+
+Note for text colors:
+
+1. "Verified Graduate" has the same color as the person's name with 50% opacity
+2. Review paragraphs inside the quotations have the same color as well, but are at 70% opacity
+
+*/
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap');
+
+*  {
+    box-sizing: border-box;
+}
+:root {
+    /* COLORS */
+    --moderate-violet: hsl(263, 55%, 52%);
+    --grayish-blue: hsl(217, 19%, 35%);
+    --blackish-blue: hsl(219, 29%, 14%);
+    --white: hsl(0, 0%, 100%);
+
+    --light-gray: hsl(0, 0%, 81%);
+    --light-grayish-blue: hsl(210, 46%, 95%);
+
+    /* FONTS */
+    --font-size: 13px;
+    --font-barlow: 'Barlow Semi Condensed';
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: var(--font-barlow);
+    font-size: var(--font-size);
+    width: 375px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.attribution { font-size: 11px; text-align: center; }
+.attribution a { color: hsl(228, 45%, 44%); }
