--- a/style.css
+++ b/style.css
@@ -35,9 +35,64 @@ body {
     padding: 0;
     font-family: var(--font-barlow);
     font-size: var(--font-size);
-    width: 375px;
-}
+    width: 375;
+    background-color: var(--light-grayish-blue);
 
+}
+.testimonial {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto auto auto;
+
+
+    font-size: var(--font-size);
+    font-family: var(--font-barlow);
+    
+    margin: 30px 25px;
+
+    background-color: var(--light-grayish-blue);
+}
+.testimonial__box {
+    border-radius: 8px;
+    color: var(--white);
+    padding: 35px;
+    margin-bottom: 30px;
+}
+.testimonial__box--header {
+    display: flex;
+}
+.header__profile {
+    margin: 0 20px 0 0;
+}
+.header__profile img {
+    border-radius: 50%;
+    border: 2px solid rgba(255, 255, 255, 50%);
+    width: 35px;
+}
+.header__info {
+    display: flex;
+    flex-direction: column;
+}
+#daniel-box {
+    background-color: var(--moderate-violet);
+    background-image: url(/images/bg-pattern-quotation.svg);
+    background-repeat: no-repeat;
+    background-position: 90% 0;
+}
+#jonathan-box {
+    background-color: var(--grayish-blue);
+}
+#jeanette-box {
+    background-color: var(--white);
+    color: var(--grayish-blue);
+}
+#patrick-box {
+    background-color: var(--blackish-blue);    
+}
+#kira-box {
+    background-color: var(--white);
+    color: var(--grayish-blue);
+}
 
 
 
