--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     padding: 0;
     font-family: var(--font-barlow);
     font-size: var(--font-size);
+    letter-spacing: 3%;
     width: 375;
     background-color: var(--light-grayish-blue);
 
@@ -73,6 +74,20 @@ body {
     display: flex;
     flex-direction: column;
 }
+.header__info--name {
+    margin-bottom: 3px;
+}
+.header__info--type {
+    color: rgba(255, 255, 255, 50%);
+    font-size: 11px;
+}
+.info__main {
+    font-size: 20px;
+    font-weight: 600;
+}
+.info__secondary {
+    opacity: 0.7;
+}
 #daniel-box {
     background-color: var(--moderate-violet);
     background-image: url(/images/bg-pattern-quotation.svg);
@@ -89,9 +104,73 @@ body {
 #patrick-box {
     background-color: var(--blackish-blue);    
 }
+#patrick-box > div > div > img {
+    border: 2px solid hsl(263, 54%, 55%);
+    
+}
 #kira-box {
     background-color: var(--white);
     color: var(--grayish-blue);
+}
+
+/* MEDIA QUERYS ----- GRID */
+
+@media (min-width: 470px) {
+    .testimonial {
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(4, auto);
+        column-gap: 35px;
+        justify-items: center;
+        grid-template-areas: 
+            "daniel kira"
+            "patrick patrick"
+            "jeanette jonathan"
+            " hola hola"
+        ;
+    }
+    #daniel-box {
+        grid-area: daniel;
+    }
+    #jonathan-box {
+        grid-area: jonathan;
+    }
+    #jeanette-box {
+        grid-area: jeanette;
+    }
+    #patrick-box {
+        grid-area: patrick;
+    }
+    #kira-box {
+        grid-area: kira;
+    }
+}
+
+@media (min-width: 1024px) {
+    .testimonial {
+        grid-template-rows: repeat(2, auto);
+        grid-template-columns: repeat(4, 1fr);
+        column-gap: 35px;
+        justify-items: center;
+        grid-template-areas: 
+            "daniel daniel jonathan kira"
+            "jeanette patrick patrick kira"
+        ;
+    }
+    #daniel-box {
+        grid-area: daniel;
+    }
+    #jonathan-box {
+        grid-area: jonathan;
+    }
+    #jeanette-box {
+        grid-area: jeanette;
+    }
+    #patrick-box {
+        grid-area: patrick;
+    }
+    #kira-box {
+        grid-area: kira;
+    }
 }
 
 
