--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     font-size: var(--font-size);
     letter-spacing: 3%;
     width: 375;
+    height: 100vh;
     background-color: var(--light-grayish-blue);
 
 }
